# PVRApiIntro

./: .gitmodules  .travis.yml  LICENSE  README.md
Dependencies/: Helper.cmake  single_source_shader.cmake
Dependencies/apk_maker/: AndroidManifest.xml.in  CMakeLists.txt  PVRActivity.java  ant.properties.in  build.xml  local.properties.in  project.properties.in  strings.xml.in
Dependencies/ios/: ios.plist
Dependencies/osx/: osxplist.info
Dependencies/osx/Bundle/Resources/en.lproj/: MainMenu.nib
Intro1ClearAPI/: CMakeLists.txt  ClearAPI.cpp  README.md
Intro2Shaders/: CMakeLists.txt  README.md  Shaders.cpp  shader.frag  shader.vert
Intro3Assets/: Assets.cpp  CMakeLists.txt  README.md  gnome_shader.frag  gnome_shader.vert  gnome_tex_small.pvr
